--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/eslint-config-prettier": "^3.0.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vanilla-tilt": "^1.5.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
