--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-prettier": "^3.0.4",
     "node-sass": "^4.9.0",
+    "rellax": "^1.7.1",
     "sass-loader": "^7.0.1",
     "vanilla-tilt": "^1.5.0",
     "vue-template-compiler": "^2.5.17"
